<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_form_name"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />


        <EditText
            android:id="@+id/et_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_address"
            app:layout_constraintStart_toEndOf="@+id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_profession"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />


        <EditText
            android:id="@+id/et_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_profession"
            app:layout_constraintStart_toEndOf="@+id/tv_profession"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dream_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dream_job"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profession" />


        <EditText
            android:id="@+id/et_dream_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_dream_job"
            app:layout_constraintStart_toEndOf="@+id/tv_dream_job"
            app:layout_constraintTop_toBottomOf="@id/tv_profession" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_favourite_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_favourite_food"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dream_job" />


        <EditText
            android:id="@+id/et_favourite_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_favourite_food"
            app:layout_constraintStart_toEndOf="@+id/tv_favourite_food"
            app:layout_constraintTop_toBottomOf="@id/tv_dream_job" />
    </LinearLayout>


    <Button

        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_submit"

        >


    </Button>

</LinearLayout>