<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/purple_700"
        android:text="@string/tv_profile_name"
        android:textSize="@dimen/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:textColor="@color/teal_200"
            android:layout_height="wrap_content"
            android:text="@string/tv_name_label" />

        <TextView
            android:id="@+id/tv_name_input"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_address"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_address_label"/>


        <TextView
            android:id="@+id/tv_address_input"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_profession"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_profession_label"/>


        <TextView
            android:id="@+id/tv_profession_input"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dream_job"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dream_job_label"/>


        <TextView
            android:id="@+id/tv_dream_job_input"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_favourite_food"                 
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_favourite_food" />


        <TextView
            android:id="@+id/tv_favourite_food_input"
            android:textColor="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>